--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-479.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: iepl.rookiecloud.info, port: 50497, type: ss, cipher: aes-128-gcm, password: 674f2f62-cb5d-4e25-8aa8-839e1a15c15c}
   - {name: 🇻🇳 越南-7.86MB/s(Youtube:不良林), server: 103.74.105.118, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.74.105.118}}
-  - {name: 🇺🇸 美国-457.8KB/s(Youtube:不良林), server: 159.223.93.179, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.93.179}}
-  - {name: 🇫🇷 法国-1.89MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇸🇬 新加坡-349.9KB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-506.9KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
   - {name: 🇯🇵 日本-496.3KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-921.4KB/s(Youtube:不良林), server: 138.2.76.156, port: 46452, type: vmess, uuid: aeb5106c-3494-489b-9386-e67e5f575cb5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-423.4KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.18MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-552.2KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1022.2KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-479.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-506.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-496.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-921.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-423.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-552.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1022.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-479.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-506.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-496.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-921.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-423.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-552.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1022.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-479.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-506.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-496.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-921.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-423.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-552.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1022.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-479.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-506.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-496.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-921.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-423.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-552.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1022.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-479.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-506.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-496.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-921.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-423.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-552.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1022.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-479.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-506.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-496.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-921.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-423.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-552.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1022.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-479.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-506.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-496.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-921.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-423.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-552.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1022.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
