--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,81 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 乌克兰-389.3KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 台湾-2.51MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-1.87MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
+  - {name: 🇨🇳 中国-6.73MB/s(Youtube:不良林), server: yza2.hkbgp.wiki, port: 10353, type: ss, cipher: chacha20-ietf-poly1305, password: 1f2b603f-4400-4cb8-a12a-afe14cb641a0}
+  - {name: 🇨🇳 中国-460.3KB/s(Youtube:不良林), server: cmi.db-link.in, port: 21154, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cmi.db-link.in}}
+  - {name: 🇯🇵 日本-1.91MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.18MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-389.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 乌克兰-389.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-389.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 乌克兰-389.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 乌克兰-389.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-389.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-389.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
